# ssb-pypitemplate-instance

./: .cookiecutter.json  .cruft.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
src/ssb_pypitemplate_instance/: __init__.py  __main__.py
tests/: __init__.py  test_functions.py  test_main.py
